# distroflow

./: .env.example  .gitignore  30_DAY_EXECUTION_PLAN.md  =2.4.0  AI_AUTO_UPDATE_GUIDE.md  AI_HEALER_README.md  AUTH_FIXED.md  AUTOFETCH_FIX_SUMMARY.md  AUTOMATION_FLOW.txt  AUTOMATION_SUCCESS.md  AUTOMATION_SUMMARY.md  AUTO_DEBUG_REPORT.md  AUTO_LEAD_GEN_GUIDE.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_CHECKLIST.md  COMMANDS.md  COMPLETE_SYSTEM_GUIDE.md  CONTRIBUTING.md  COST_OPTIMIZATION_REPORT.md  DEBUGGING_COMPLETE.md  DIAGNOSIS_REPORT.md  DM_FEATURE_SUMMARY.md  DM_SYSTEM_DOCS.md  EASIEST_METHOD_CN.md  EMAIL_CAMPAIGN_README.md  EMAIL_CAMPAIGN_SETUP.md  EMAIL_CONFIG_FIXED.md  EMAIL_CONVERSION_OPTIMIZATION.md  EMAIL_OPTIMIZATION_GUIDE.md  EMAIL_RATE_ANALYSIS.md  EMAIL_VERIFICATION_EXPLAINED.md  EMAIL_VERIFICATION_GUIDE.md  EMAIL_VERIFICATION_IMPLEMENTATION.md  ETHICS.md  EXTENSION_QUICKSTART.md  FACEBOOK_COMPLETE_GUIDE.md  FACEBOOK_FIXES.md  FACEBOOK_README.md  (+403 more)
auto_leads/: leads_20251016_112852.csv  leads_20251016_112852.json  leads_20251016_143240.json  product_analysis.json  summary_20251016_112852.json  summary_20251016_142158.json  summary_20251016_143240.json
distroflow/: __init__.py  cli.py
docs/: ARCHITECTURE.md  EXTENSION.md  QUICKSTART.md  TECHNICAL_DEEP_DIVE.md
examples/: example_campaign.sh  test_components.py
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
github_content_temp/: README.md
hunter_advanced/: leads_20251016_165301.csv  leads_20251016_165301.json  summary_20251016_165301.json
(+145 files in other folders)
